# Snake

./: .scores  CMakeLists.txt  README.md
3dparty/: CMakeLists.txt
3dparty/SFML/src/SFML/Graphics/: RectangleShape.cpp
app/: .scores  CMakeLists.txt  main.cpp
app/resources/: .scores
app/src/: CMakeLists.txt  food.cpp  food.h  game.cpp  game.h  header.h  menu.cpp  menu.h  menu_utils.cpp  snake.cpp  snake.h  utils.cpp  utlis.h
